<resources>
    <string name="app_name">Bitcoin News</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tab1">Tab 1</string>
    <string name="title_tab2">Tab 2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="videos">Videos</string>
    <string name="trending">Trending</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share</string>
    <string name="about_us_app">About Us</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_first_tab_fragment">Home first tab fragment</string>
    <string name="home_second_tab_fragment">Home second tab fragment</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="t_and_c">T &amp; C</string>
    <string name="agree">I Agree</string>
    <string name="choose">Choose</string>
    <string name="select">Select</string>
    <string name="content_topics">Content Topics</string>
    <string name="your_lang">Your language</string>
    <string name="etherum">Ethereum</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="stellar">Stellar</string>
    <string name="cardano">Cardano</string>
    <string name="dogecoin">Dogecoin</string>
    <string name="tether">Tether</string>
    <string name="coin">USD Coin</string>
    <string name="xrp">XRP</string>
    <string name="solana">Solana</string>
    <string name="avalanche">Avalanche</string>
    <string name="cosmos">Cosmos</string>
    <string name="ripple">Ripple</string>
    <string name="shiba_inu">Shiba Inu</string>
    <string name="polkadot">Polkadot</string>
    <string name="tron">TRON</string>
    <string name="polygon">Polygon</string>
    <string name="litecoin">Litecoin</string>
    <string name="terra">Terra</string>
    <string name="cronos">Cronos</string>
    <string name="fix_token">FTX Token</string>
    <string name="fantom">Fantom</string>
    <string name="chromia">Chromia</string>
    <string name="monero">Monero</string>
    <string name="bnb">BNB</string>
    <string name="eos">EOS</string>
    <string name="dai">Dai</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="dash">Dash</string>
</resources>